task5/tests/our-tests/output/t12.out
lli: <stdin>:42:21: error: use of undefined value '%-22055'
%t10 = icmp sgt i32 %-22055, %t9
                    ^

